[package]
name = "ports-cli"
version = "0.1.0"
edition = "2021"
authors = ["nuky <svenvowe@gmail.com>"]
description = "A minimal CLI tool to list open ports and associated processes"
keywords = ["cli", "system", "process", "port", "pid"]
categories = ["command-line-utilities"]
repository = "https://github.com/nuclearglow/ports-cli"
readme = "README.md"
license = "MIT"
exclude = [
    ".vscode/*",
    ".gitignore"
]

[[bin]]
name = "ports"
path = "src/main.rs"
